@@ -1,5 +1,8 @@
 ﻿Pulse Changelog
 
+Pulse-4.12.9
+ - Added Water Track Speed on DVL Page.
+
 Pulse-4.12.8
  - Update PD0 data types to handle any number of beams including 3 beam systems.
  - In TimeSeries, added SystemSetup Boost Pos and Neg Voltage.
